# magma

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  main.cpp
backends/: CMakeLists.txt
backends/backend_OpenGL/: backend_OpenGL.cpp
backends/backend_OpenGL/glad/include/glad/: glad.h
backends/backend_OpenGL/glad/src/: glad.c
backends/backend_OpenGL/include/: backend_OpenGL.hpp
backends/backend_OpenGL/platform/: platform.hpp  platform_unix.cpp  platform_windows.cpp
backends/backend_OpenGL/platform_unix/: backend_OpenGL.cpp  backend_OpenGL.hpp
backends/backend_OpenGL/platform_windows/: backend_OpenGL.cpp  wglext.h
backends/include/: backend.hpp  backend_settings.hpp  shaders.hpp
backends/src/: shaders.cpp
editor/: CMakeLists.txt  main.cpp
editor/include/: editor.hpp
editor/src/: editor.cpp
engine/: CMakeLists.txt
engine/include/: magma.hpp  mgm_backend.hpp  mgm_window.hpp
engine/src/: magma.cpp  mgm_backend_opengl.cpp  mgm_window.cpp  mgm_window_glfw.cpp
imgui/backends/: imgui_impl_mgmgpu.cpp  imgui_impl_mgmgpu.h
include/: ecs.hpp  editor.hpp  engine.hpp  engine_manager.hpp  expose_api.hpp  game_manager.hpp  input.hpp  inspector.hpp  notifications.hpp  systems.hpp
include/built-in_components/: renderable.hpp
include/editor_windows/: file_browser.hpp  scene_view.hpp  script_editor.hpp  settings.hpp
include/systems/: editor.hpp  input.hpp  notifications.hpp  renderer.hpp  resources.hpp
include/tools/: imgui_impl_mgmgpu.h  lua_vm.hpp  mgmecs.hpp
include/tools/base64/: base64.license
libs/internal/: CMakeLists.txt
libs/internal/mgmstd/: CMakeLists.txt  _padding.cpp  mgm_allocator.hpp  mgm_array.hpp  mgm_assert.hpp  mgm_function.hpp  mgm_hash.hpp  mgm_map.hpp  mgm_option.hpp  mgm_queues.hpp  mgm_set.hpp  mgm_span.hpp  mgm_string.hpp  mgm_threads.hpp  mgm_tuple.hpp  mgm_type_info.hpp  mgm_types.hpp
luajit/: CMakeLists.txt
mgmcommon/: CMakeLists.txt
mgmcommon/include/: any.hpp  file.hpp  helper_math.hpp  helpers.hpp  json.hpp  logging.hpp  mgmath.hpp  types.hpp
mgmcommon/include/mgmath/: mgmath.hpp
mgmcommon/platform/: platform.hpp  platform_opengl.cpp  platform_opengl.hpp  platform_unix.cpp
mgmcommon/platform_filesystem_compatible/: file.cpp
mgmcommon/platform_linux/: file.cpp
mgmcommon/platform_stdio_compatible/: file.cpp  logging.cpp
mgmcommon/platform_windows/: file.cpp
mgmcommon/src/: file.cpp  helpers.cpp  json.cpp  logging.cpp
mgmlib/: CMakeLists.txt
mgmlib/imgui/backends/: imgui_impl_mgmgfx.cpp  imgui_impl_mgmgfx.h  imgui_impl_mgmgpu.cpp  imgui_impl_mgmgpu.h
mgmlib/include/: dloader.hpp  mgmgfx.hpp  mgmgpu.hpp  mgmlib.hpp  threadpool.hpp
mgmlib/platform_linux/: dloader.cpp
mgmlib/platform_windows/: dloader.cpp
mgmlib/src/: backend_OpenGL.cpp  dloader.cpp  dloader.hpp  mgmgfx.cpp  mgmgpu.cpp  mgmlib.cpp  threadpool.cpp
mgmwin/: CMakeLists.txt
mgmwin/include/: mgmwin.hpp
mgmwin/platform/: platform_x11.cpp
mgmwin/platform_windows/: mgmwin.cpp  native_window.hpp
mgmwin/platform_x11/: mgmwin.cpp  native_window.hpp
mgmwin/src/: mgmwin.cpp
resources/shaders/: default.shader  imgui.shader
src/: ecs.cpp  editor.cpp  engine.cpp  engine_manager.cpp  enums.rs  game_manager.cpp  input.cpp  inspector.cpp  lib.rs  mgmath.rs  notifications.cpp  rng.rs
src/built-in_components/: renderable.cpp
src/editor_windows/: editor_palette.cpp  file_browser.cpp  hierarchy_view.cpp  scene_view.cpp  script_editor.cpp  settings.cpp
src/memory/: mod.rs
src/mesh/: mod.rs
src/shader/: mod.rs
src/systems/: editor.cpp  input.cpp  notifications.cpp  renderer.cpp  resources.cpp
src/tools/: imgui_impl_mgmgpu.cpp  lua_vm.cpp
src/video/: mod.rs
src/video/backends/: mod.rs  opengl.rs  vertex_array_info.rs
