cmake_minimum_required(VERSION 4.0)
project(Magma)


# C/C++ config
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED TRUE)


# Setup directories
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin/libs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}/bin/libs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}/bin/libs)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin/shared)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}/bin/shared)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}/bin/shared)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}/bin)

set(CMAKE_ROOT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})


# Platform specific config
if(WIN32 AND MSVC)
    message(FATAL_ERROR "MSVC is not supported")    
endif()

if(WIN32 OR (UNIX AND NOT APPLE))
    set(MAGMA_USE_GLFW TRUE)
endif()


# Libs
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libs/external)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libs/internal)


# Engine modules
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine)


# Editor executable
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/editor)
